@@ -13,6 +13,9 @@ Version 1.1.0
 * Fix corrupted vehicle positions after savegame reload.
 * Fix default ambience overlapping current one when loading a savegame.
 * Fix doppelganger being limited to be in a single room.
+* Fix bat AI, now behave like TR4.
+* Fix bat damage (50 to 2).
+* Fix bat death fall which resulted in passing through the floor.
 * Add multiple doppelgangers by using the same OCB for the origin nullmesh and doppelganger.
 * Implement separate audio track channel for playing voiceovers with subtitles.
 * Don't stop ambience when Lara dies.
